--- a/src/all/kavita/build.gradle
+++ b/src/all/kavita/build.gradle
@@ -9,5 +9,5 @@ apply from: "$rootDir/common.gradle"
 dependencies {
     implementation("org.apache.commons:commons-text:1.11.0")
     implementation 'info.debatty:java-string-similarity:2.0.0'
-    implementation(project(':lib-i18n'))
+    implementation(project(':lib:i18n'))
 }
